--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,11 @@ version: '3.8'
 services:
   numerology-ai:
     build: .
-    container_name: numerology-ai-app
     ports:
       - "5173:5173"
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - NODE_ENV=production
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5173"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    expose:
+      - "5173"
