--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - VITE_GEMINI_API_KEY=${GEMINI_API_KEY}
       - NODE_ENV=production
     restart: unless-stopped
     expose:
